--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,34 @@
 body{
     background-color: beige;
-    margin: auto;
+
 
 }
 
 .container{
     width: 95%;
-    margin: auto;
     margin-top: 5px;
-    padding: 10px;
+    
     
 }
-.container .head-container{
-    padding: 10px;
-   
-    margin: auto;
-    text-align: center;
+.elementos-head{
+  padding: 10px;
+  margin: auto;
+  text-align: center;
 }
+ .head-container{
+   display: flex;
+   margin: 2px;
+   justify-content: space-around;
+    width: 100%;
+    text-align: left;
+    border-color: black;
+    border: 1px solid black;
+    background: rgba(224, 232, 145, 0.829) ;
+    font-size: 20px;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+ }
 .body-content{
     padding: 10px;
     margin: auto;
@@ -45,7 +57,7 @@ img{
 .card {
     width: 300px;
     padding: 10px;
-    background-image: linear-gradient(to right bottom, #5d0391, #7b05ae, #9b05cb, #bd00e7, #bd00e7);
+    background-image: linear-gradient(to right bottom, #e6dd66, #fbfe98, #fcfc64, #e9f57d, #f2f681);
     background-size: 200% 200%;
     border-radius: 12px;
   }
