--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ img{
     border-radius: 15px;
   }
   
-  button {
+  .button {
     width: 100%;
     margin-top: 15px;
     background-image: linear-gradient(to right bottom, #5d0391, #7b05ae, #9b05cb, #bd00e7, #bd00e7);
@@ -97,11 +97,11 @@ img{
   
   }
   
-  button:active {
+  .button:active {
     transform: translateY(3px);
   }
   
-  .card:hover, button:hover {
+  .card:hover, .button:hover {
     animation: gradient 0.8s ease-in 1;
   }
   
